Sat May  3 14:57:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basic1): Rewrite test (use dotest, unroll the loops
	which IMHO makes the test a zillion times more understandable, and
	only do the variant which tests for 4 files at a time--we test one
	file at a time lots of places).

2 May 1997  Ziv Gigus <ziv@rest.home.net>
	    and Jim Kingdon

	* client.c, client.h (client_process_import_file): New argument
	all_files_binary means treat all files as binary.
	* import.c (import_descend): Pass it if -kb is specified.
	* client.c (client_process_import_file): In the
	non-all_files_binary case, call wrap_rcsoption to determine
	whether the file is binary.

Thu May  1 13:44:51 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (binfiles2): New tests, for update -j and binary files.

Wed Apr 30 11:18:36 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* recurse.c (start_recursion): Also free reposfile.
	Don't look in repository if client_active (latter bug reported by Paul
	Sanders <p.sanders@dial.pipex.com>).

Mon Apr 28 22:36:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* diff.c (diff_file_nodiff): Remove SERVER_SUPPORT ifdefs.  They
	were not based on server_active, which doesn't really make any
	sense (it meant that compiling --disable-server could affect the
	behavior of the non-client/server CVS).  This affected the output
	in tests death2-diff-11 and death2-diff-12 in the testsuite.
	* sanity.sh (newb-123j0): Also accept "Needs Checkout", for a
	--disable-server CVS.

	* main.c (cmd_usage): Change "run diffs" to "show differences";
	the former is jargon.
	* edit.c (edit_usage): Fix typo ("." -> ",").
	* edit.c (editors_usage), watch.c (watchers_usage): Mention -l.
	* checkout.c (export_usage): Say what -P does.
	* history.c (history_usg): Add comment about message wording.

Mon Apr 28 14:47:45 1997  Norbert Kiesel  <nk@cosa.de>

	* checkin.c (Checkin): use filename without path when calling